--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: #fff5cb;
 }
@@ -7,4 +6,15 @@ body {
   border-radius: 10%;
   border: 2px solid black;
   padding: 0px;
+}
+.button {
+  background-color: #e2edf1;
+  color: rgb(97, 96, 96);
+  border-radius: 20px;
+  padding: 9px 30px;
+  border: 1.9px solid rgb(97, 96, 96);
+}
+
+.home-title {
+  /* font-family: monospace; */
 }
