Formatted date on Details.jsx and automated min value for Request submission/points

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -131,3 +131,17 @@ body {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
+.status-assigned-button {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: red;
+}
+
+.status-free-button {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: green;
+}
